Fix link contrast issue

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -35,11 +35,11 @@
     }
 
     a {
-      color: #357aba;
-      text-decoration: none;
+      color: #193BB9;
+      text-decoration: underline;
 
       &:hover {
-        text-decoration: underline;
+        text-decoration: none;
       }
     }
 
